[package]
name = "countdown_letters"
version = "0.1.0"
edition = "2021"
authors = ["Andy Ward (andy.ward.uk@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
terminal_size = "0.2.1"

[profile.release]
debug = true
