[package]
name = "countdown_letters"
version = "0.1.0"
edition = "2021"
authors = ["Andy Ward (andy.ward.uk@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
terminal_size = "0.2.1"
num-format = { version = "0.4.0", features = ["with-system-locale"] }
lazy_static = "1.4.0"

[profile.release]
debug = true
